--- a/Cour-Html-Css/index.html
+++ b/Cour-Html-Css/index.html
@@ -8,10 +8,59 @@
 </head>
 <body>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum cupiditate quo error sed delectus dolorum sint, distinctio, mollitia eligendi dolore sunt nihil deleniti ratione recusandae, asperiores sit beatae voluptas earum vitae. Perferendis alias ad, ipsum consequatur placeat assumenda sapiente possimus harum error eos eligendi natus dolore tenetur? Consequatur explicabo consectetur nemo laboriosam voluptas! Maxime pariatur magni mollitia possimus voluptate consequatur temporibus voluptates, odit modi aspernatur repellendus nobis libero laboriosam aliquam beatae nulla atque! Sapiente aliquam ipsa similique aspernatur dolorem. Illo unde animi cupiditate iusto neque excepturi ab fugit nesciunt quae eos deleniti, aliquam totam voluptatum sint tempora officiis eaque dolore?</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum cupiditate quo error sed delectus dolorum sint, distinctio, mollitia eligendi dolore sunt nihil deleniti ratione recusandae, asperiores sit beatae voluptas earum vitae. Perferendis alias ad, ipsum consequatur placeat assumenda sapiente possimus harum error eos eligendi natus dolore tenetur? Consequatur explicabo consectetur nemo laboriosam voluptas! Maxime pariatur magni mollitia possimus voluptate consequatur temporibus voluptates, odit modi aspernatur repellendus nobis libero laboriosam aliquam beatae nulla atque! Sapiente aliquam ipsa similique aspernatur dolorem. Illo unde animi cupiditate iusto neque excepturi ab fugit nesciunt quae eos deleniti, aliquam totam voluptatum sint tempora officiis eaque dolore?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum cupiditate quo error sed delectus dolorum sint, distinctio, mollitia eligendi dolore sunt nihil deleniti ratione recusandae, asperiores <br> sit beatae voluptas earum vitae. Perferendis alias ad, ipsum consequatur placeat assumenda sapiente possimus harum error eos eligendi natus dolore tenetur? Consequatur explicabo consectetur nemo laboriosam voluptas! Maxime pariatur magni mollitia possimus voluptate consequatur temporibus voluptates, odit modi aspernatur repellendus nobis libero laboriosam aliquam beatae nulla atque! Sapiente aliquam ipsa similique aspernatur dolorem. Illo unde animi cupiditate iusto neque excepturi ab fugit nesciunt quae eos deleniti, aliquam totam voluptatum sint tempora officiis eaque dolore?</p>
         <h1>Le Titre</h1>
         <h2>Le Titre</h2>
         <header>En tete</header>
         <footer>pied de page</footer>
+
+        <!-- Les Commentaire-->
+
+        <h3>Les liens</h3>
+
+        <a href="https://www.google.fr/search?sxsrf=ALiCzsYC4B3u_jJbZl_yIdkJrxfMYkpz3g:1671895246572&q=agrosup+dijon+offre+d%27emploi+developpeur+web&spell=1&sa=X&biw=1873&bih=961&dpr=1&ibp=htl;jobs&ved=2ahUKEwjewI6Tx5L8AhUlUKQEHQuTDSAQudcGKAJ6BAgLEBw&sxsrf=ALiCzsb-cnT3pDXsWaMSLsvLQgzzRCUlag:1671895248518#htivrt=jobs&htidocid=7mkadY8r4uwAAAAAAAAAAA%3D%3D&fpstate=tldetail" target="_blank" rel="noopener noreferrer"></a>
+
+        <a href="https://www.psg.fr/"> <img src="Logo-Psg.jpg" alt="Logo"></a>
+
+        <h3>Les liste</h3>
+
+        <h5>les liste ordonné</h5>
+
+        <ol>
+            <li>Psg</li>
+            <li>Om</li>
+            <li>Ol</li>
+            <li>Losc</li>
+        </ol>
+
+        <h5>Les listes Déordonné</h5>
+
+        <ul>
+            <li>Psg</li>
+            <li>Om</li>
+            <li>Ol</li>
+            <li>Losc</li>
+        </ul>
+
+        <h2>Les Formulaire</h2>
+
+        <form> 
+            <label for="nom">Nom</label>
+            <input id="nom" type="text" name="nom" placeholder="Veuillez entrer votre nom">
+
+            <input type="radio" value="monsieur" name="sexe" >monsieur
+            <input type="radio" value="madame" name="sexe" >madame
+
+            <div>
+                <select name="voiture">
+                    <option value="Audi.">Audi.</option>
+                    <option value="Mercedes.">Mercedes.</option check>
+                    <option value="DACIA.">DACIA.</option>
+                    <option value="Citroën.">Citroën.</option>
+                    <option value="Fiat.">Fiat.</option>
+                    
+                </select>
+            </div>
+        </form>
 </body>
 </html>
