--- a/Cour-Html-Css/index.html
+++ b/Cour-Html-Css/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Formation Html-Css</title>
 </head>
 <body>
@@ -62,5 +63,17 @@
                 </select>
             </div>
         </form>
+
+        <div class="aa">
+            <p>Lorem ipsum dolor sit amet consectetur .</p>
+        </div>
+
+        <div class="aaa">
+            <p>Lorem ipsum dolor sit amet consectetur .</p>
+        </div>
+      <header class="float"></header>
+        <div class="left"></div>
+        <div class="right"></div>
+        <footer class="float-1"></footer>
 </body>
 </html>
