--- a/Cour-Html-Css/index.html
+++ b/Cour-Html-Css/index.html
@@ -71,9 +71,9 @@
         <div class="aaa">
             <p>Lorem ipsum dolor sit amet consectetur .</p>
         </div>
-      <header class="float"></header>
+      <div id="container">
         <div class="left"></div>
         <div class="right"></div>
-        <footer class="float-1"></footer>
+        </div>
 </body>
 </html>
