--- a/Cour-Html-Css/Site-web-1/index-1.html
+++ b/Cour-Html-Css/Site-web-1/index-1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-1.css">
-    <link rel="shorcut icon" href="./media-1/article-image-1.jpg">
+    <link rel="shorcut icon" href="/media-1/article-image-1.jpg">
     <title>Travel Agency</title>
 </head>
 <body>
@@ -46,6 +46,7 @@
                         <h4>Voyager</h4>
                         <p>Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au long de votre voyage.</p>
                     </li>
+                    <div class="clear"></div>
                 </ul>
             </div>
 
@@ -53,6 +54,19 @@
 
         <section id="possibilities">
             <div class="wrapper">
+                <article style="background-image:url(/media-1/article-image-1.jpg);">
+                    <div class="overlay">
+                        <h4>Partez en famille</h4>
+                        <p><small>Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !</small></p>
+                        <a href="#" class="button-2">Plus d'infos</a></div>
+                 </article>
+
+                 <article  style="background-image:url(/media-1/article-image-2.jpg);">
+                    <div class="overlay">
+                        <h4>Envie de s'evader</h4>
+                        <p><small>Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !</small></p>
+                        <a href="#" class="button-2">Plus d'infos</a></div>
+                 </article>
                 
             </div>
 
